cmake_minimum_required(VERSION 3.22)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(algorithm
#        leetcode/leetcode-m1707.cpp leetcode/leetcode-m1708.cpp)
add_executable(offer2-014 leetcode/offer2-014.cc)
add_executable(offer2-105 leetcode/offer2-015.cc)
add_executable(offer2-016 leetcode/offer2-016.cc)
add_executable(offer2-017 leetcode/offer2-017.cc)