cmake_minimum_required(VERSION 3.22)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(algorithm
#        leetcode/leetcode-m1707.cpp leetcode/leetcode-m1708.cpp)
add_executable(offer2-014 leetcode/offer2-014.cc)
add_executable(offer2-105 leetcode/offer2-015.cc)
add_executable(offer2-016 leetcode/offer2-016.cc)
add_executable(offer2-017 leetcode/offer2-017.cc)
add_executable(lccup-0 leetcode/lccup-0.cpp)
add_executable(my_vector template/my_vector.cc)
add_executable(offer2-018 leetcode/offer2-018.cc)
add_executable(offer2-019 leetcode/offer2-019.cc)
add_executable(offer2-020 leetcode/offer2-020.cc)
add_executable(offer2-021 leetcode/offer2-021.cc)
add_executable(lccup-3 leetcode/lccup-3.cc)
add_executable(lccup-5 leetcode/lccup-5.cc)
add_executable(lccup-4 leetcode/lccup-4.cc)
add_executable(leetcode-w290-0 leetcode/leetcode-w290-0.cc)
add_executable(leetcode-w290-1 leetcode/leetcode-w290-1.cc)
add_executable(leetcode-w290-2 leetcode/leetcode-w290-2.cc)
add_executable(leetcode-w290-3 leetcode/leetcode-w290-3.cc)
add_executable(bytedance-4 interview/bytedance-4.cc)
add_executable(bytedance-5 interview/bytedance-5.cc)
add_executable(tencent-0 interview/tencent-0.cc)
add_executable(tencent-1 interview/tencent-1.cc)
add_executable(tencent-2 interview/tencent-2.cc)
add_executable(tencent-3 interview/tencent-3.cc)
add_executable(tencent-4 interview/tencent-4.cc)
add_executable(offer2-022 leetcode/offer2-022.cc)
add_executable(offer2-023 leetcode/offer2-023.cc)